--- a/package.json
+++ b/package.json
@@ -30,18 +30,20 @@
     "clean": "rimraf $npm_package_config_build_folder/* && mkdir -p $npm_package_config_build_folder && echo ---------CLEAN----------`date +%r`",
     "partial:uglify": "[ $NODE_ENV != production ] && cat || uglifyjs --compress drop_console,unused=true --screw-ie8"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-jest": "^15.0.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "6.5.0",
     "babelify": "^7.3.0",
     "browserify": "13.1.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
     "jest": "^15.1.1",
     "npm-check-updates": "^2.8.0",
     "onchange": "^3.0.2",
-    "redux": "^3.6.0",
     "redux-mock-store": "^1.2.0",
-    "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.4",
     "uglifyjs": "^2.4.10",
     "watchify": "^3.7.0"
