--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "clear; echo '* NPM UPDATE *'; echo '* * * *  BUILD  * * * *'; npm run -s clean; NODE_ENV=development npm run -s build:js",
     "***********": "",
     "build:js": "npm run -s build:js:browserify | npm run -s partial:uglify -- --mangle > ./build/store.js && echo ---------JS-------------`date +%r`",
-    "build:js:browserify": "browserify $npm_package_config_entry_file --extension=.js --extension=.jsx -t [ babelify --presets [ es2015 stage-0 ] ]",
+    "build:js:browserify": "browserify $npm_package_config_entry_file --extension=.js --extension=.jsx --detectGlobals false --standalone todo-redux-state -t [ babelify --presets [ es2015 stage-0 ] ]",
     "**********": "",
     "clean": "rimraf $npm_package_config_build_folder/* && mkdir -p $npm_package_config_build_folder && echo ---------CLEAN----------`date +%r`",
     "partial:uglify": "[ $NODE_ENV != production ] && cat || uglifyjs --compress drop_console,unused=true --screw-ie8"
