fixed state getter not retriggring

--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   "scripts": {
     "************": "",
     "test": "clear; echo '**** TESTS ****'; jest",
-    "watch": "clear; echo '* NPM UPDATE *'; npm update; echo '* CLEAN * WATCHIFY *'; npm run -s clean; NODE_ENV=development npm run -s watch:js",
-    "build": "clear; echo '* NPM UPDATE *'; echo '* * * *  BUILD  * * * *'; npm run -s clean; NODE_ENV=production npm run -s build:js",
+    "watch": "clear; echo '* NPM UPDATE *'; npm update; echo '* CLEAN * WATCHIFY *'; NODE_ENV=development npm run -s watch:all",
+    "build": "clear; echo '* NPM UPDATE *'; npm update; echo '* * *  BUILD  * * * '; NODE_ENV=development npm run -s build:all",
     "***********": "",
-    "watch:js": "watchify $npm_package_config_entry_file --extension=.js --extension=.jsx -t [ babelify ] --detectGlobals false --standalone todo-redux-state --debug -o 'cat > $npm_package_config_build_folder/todo-redux-state.js && echo ---------WATCHIFY--------`date +%r`'",
+    "watch:all": "npm run -s clean && npm run -s watch:js",
+    "watch:js": "watchify $npm_package_config_entry_file --extension=.js -t [ babelify ] --detectGlobals false --standalone todo-redux-state --debug -o 'cat > $npm_package_config_build_folder/todo-redux-state.js && echo ---------WATCHIFY--------`date +%r`'",
     "**********": "",
+    "build:all": "npm run -s clean && npm run -s build:js && npm run -s build:finish",
     "build:js": "npm run -s build:js:browserify | npm run -s partial:uglify > $npm_package_config_build_folder/todo-redux-state.js && echo ---------JS-------------`date +%r`",
-    "build:js:browserify": "browserify $npm_package_config_entry_file --extension=.js --extension=.jsx --detectGlobals false --standalone todo-redux-state -t [ babelify ] | derequire",
+    "build:js:browserify": "browserify $npm_package_config_entry_file --extension=.js -t [ babelify ] --detectGlobals false --standalone todo-redux-state | derequire",
+    "build:finish": "echo ---------FINISHED-------`date +%r`",
     "*********": "",
     "clean": "rimraf $npm_package_config_build_folder/* && mkdir -p $npm_package_config_build_folder && echo ---------CLEAN----------`date +%r`",
     "partial:uglify": "[ $NODE_ENV = production ] && uglifyjs --compress drop_console,unused=true --mangle --screw-ie8 || cat"
