--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "************": "",
     "test": "clear; echo '**** TESTS ****'; jest",
     "watch": "clear; echo '* NPM UPDATE *'; npm update; echo '* CLEAN * WATCHIFY *'; NODE_ENV=development npm run -s watch:all",
-    "build": "clear; echo '* NPM UPDATE *'; npm update; echo '* * *  BUILD  * * * '; NODE_ENV=development npm run -s build:all",
+    "build": "clear; echo '* NPM UPDATE *'; echo '* * *  BUILD  * * * '; NODE_ENV=development npm run -s build:all",
     "***********": "",
     "watch:all": "npm run -s clean && npm run -s watch:js",
     "watch:js": "watchify $npm_package_config_entry_file --extension=.js -t [ babelify ] --detectGlobals false --standalone todo-redux-state --debug -o 'cat > $npm_package_config_build_folder/todo-redux-state.js && echo ---------WATCHIFY--------`date +%r`'",
