--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "main": "./build/todo-redux-state.js",
   "scripts": {
     "************": "",
-    "test": "clear; echo '**** TESTS ****'; jest",
     "watch": "clear; echo '* NPM UPDATE *'; npm update; echo '* CLEAN * WATCHIFY *'; NODE_ENV=development npm run -s watch:all",
     "build": "clear; echo '* NPM UPDATE *'; npm update; echo '* * *  BUILD  * * * '; NODE_ENV=development npm run -s build:all",
+    "test": "clear; echo '**** TESTS ****'; jest",
+    "demo": "clear; echo '**** DEMO ****'; node ./src/demo",
     "***********": "",
     "watch:all": "npm run -s clean && npm run -s watch:js",
     "watch:js": "watchify $npm_package_config_entry_file --extension=.js -t [ babelify ] --detectGlobals false --standalone todo-redux-state --debug -o 'derequire > $npm_package_config_build_folder/todo-redux-state.js && echo ---------WATCHIFY--------`date +%r`'",
@@ -41,15 +42,15 @@
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-jest": "^15.0.0",
+    "babel-jest": "^16.0.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "babelify": "^7.3.0",
     "browserify": "13.1.0",
     "derequire": "^2.0.3",
     "exorcist": "^0.4.0",
-    "jest": "^15.1.1",
-    "npm-check-updates": "^2.8.0",
+    "jest": "^16.0.0",
+    "npm-check-updates": "^2.8.2",
     "onchange": "^3.0.2",
     "redux-mock-store": "^1.2.1",
     "rimraf": "^2.5.4",
