--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "1.0.0",
   "name": "todo-redux-state",
-  "description": "Redux state container for advanced Todo App",
+  "description": "Redux state container for extreme decoupling todo app example",
   "author": "Baz <baz@thinkloop.com>",
   "license": "MIT",
   "repository": {
