--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "************": "",
     "watch": "clear; echo '* NPM UPDATE *'; npm update; echo '* CLEAN * WATCHIFY *'; NODE_ENV=development npm run -s watch:all",
     "build": "clear; echo '* NPM UPDATE *'; npm update; echo '* * *  BUILD  * * * '; NODE_ENV=development npm run -s build:all",
-    "test": "clear; echo '**** TESTS ****'; jest",
-    "demo": "clear; echo '**** DEMO ****'; node ./src/demo",
+    "test": "clear; npm run -s separator; echo '**** TESTS ****'; echo; jest",
+    "demo": "clear; npm run -s separator; echo '**** DEMO ****'; echo; node ./src/demo",
     "***********": "",
     "watch:all": "npm run -s clean && npm run -s watch:js",
     "watch:js": "watchify $npm_package_config_entry_file --extension=.js -t [ babelify ] --detectGlobals false --standalone todo-redux-state --debug -o 'derequire > $npm_package_config_build_folder/todo-redux-state.js && echo ---------WATCHIFY--------`date +%r`'",
@@ -35,7 +35,8 @@
     "build:finish": "echo ---------FINISHED-------`date +%r`",
     "*********": "",
     "clean": "rimraf $npm_package_config_build_folder/* && mkdir -p $npm_package_config_build_folder && echo ---------CLEAN----------`date +%r`",
-    "partial:uglify": "[ $NODE_ENV = production ] && uglifyjs --compress drop_console,unused=true --mangle --screw-ie8 || cat"
+    "partial:uglify": "[ $NODE_ENV = production ] && uglifyjs --compress drop_console,unused=true --mangle --screw-ie8 || cat",
+    "separator": "echo; echo; echo '* * * * * * * * * * * * * * * * * '; echo '* * * * * * * * * * * * * * * * * '; echo '* * * * * * * * * * * * * * * * * '; echo '* * * * * * * * * * * * * * * * * '; echo;"
   },
   "dependencies": {
     "redux": "^3.6.0",
